cmake_minimum_required(VERSION 3.12)
project(EASY)

set(CMAKE_CXX_STANDARD 14)


add_executable(1-twoSum easy/1-twoSum.cpp)
add_executable(9-palindromeNumber easy/9-palindromeNumber.cpp)
add_executable(13-romanToInteger easy/13-romanToInteger.cpp)
add_executable(14-longestCommonPrefix easy/14-longestCommonPrefix.cpp)
add_executable(26-removeDuplicateSortedArray easy/26-removeDuplicateSortedArray.cpp)
add_executable(27-removeElement easy/27-removeElement.cpp)
add_executable(28-strStr easy/28-strStr.cpp)
add_executable(35-searchInsertPosition easy/35-searchInsertPosition.cpp)
add_executable(53-Maximum-Subarray easy/53-Maximum-Subarray.cpp)
add_executable(58-lengthOfLastWorld easy/58-lengthOfLastWorld.cpp)