cmake_minimum_required(VERSION 3.12)
project(EASY)

set(CMAKE_CXX_STANDARD 14)


add_executable(1-twoSum easy/1-twoSum.cpp)
add_executable(9-palindromeNumber easy/9-palindromeNumber.cpp)
add_executable(13-romanToInteger easy/13-romanToInteger.cpp)
add_executable(14-longestCommonPrefix easy/14-longestCommonPrefix.cpp)
add_executable(26-removeDuplicateSortedArray easy/26-removeDuplicateSortedArray.cpp)
add_executable(27-removeElement easy/27-removeElement.cpp)
add_executable(28-strStr easy/28-strStr.cpp)
add_executable(35-searchInsertPosition easy/35-searchInsertPosition.cpp)
add_executable(53-Maximum-Subarray easy/53-Maximum-Subarray.cpp)
add_executable(58-lengthOfLastWorld easy/58-lengthOfLastWorld.cpp)
add_executable(66-plusOne easy/66-plusOne.cpp)
add_executable(67-addBinary easy/67-addBinary.cpp)
add_executable(69-sqrt easy/69-sqrt.cpp)
add_executable(70-climbingStairs easy/70-climbingStairs.cpp)
add_executable(83-removeDuplicatesFromSortedList easy/83-removeDuplicatesFromSortedList.cpp)
add_executable(88-mergeSortedArray easy/88-mergeSortedArray.cpp)
add_executable(100-sameTree easy/100-sameTree.cpp)
add_executable(101-symmetricTree easy/101-symmetricTree.cpp)
add_executable(104-maximumDepthOfBinaryTree easy/104-maximumDepthOfBinaryTree.cpp)
add_executable(107-binaryTreeLevelOrderTravelsal easy/107-binaryTreeLevelOrderTravelsal.cpp)
add_executable(108-convertSortedArrayToBinarySearchTree easy/108-convertSortedArrayToBinarySearchTree.cpp dataType/TreeNode.cpp utils/prettyPrintTree.cpp)
